--- a/plans.html
+++ b/plans.html
@@ -173,7 +173,7 @@
       <div class="col-md-4">
         <h4 class="h6">CONTACT DETAILS</h4>
         <ul class="list-unstyled text-secondary">
-          <li>caravan@niranjan.com.br</li>
+          <li>caravan@niranjan.com</li>
           <li>+91 9529742213</li>
           <li>Monday to Friday from 8am to 6pm</li>
         </ul>
