--- a/msg.html
+++ b/msg.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <div class="container"><h1>Tickit Booked Successfuly</h1></div>
+    <div class="container"><h1>Ticket Booked Successfuly</h1></div>
 </body>
 </html>
